Issue #103: fix badly encoded words.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -735,12 +735,12 @@ INCLUDE(cmake/FindICU.cmake)
 
 FIND_PACKAGE(ICU QUIET)
 
-IF(WIN32)
-	SET(VMIME_CHARSETCONV_LIB_DETECTED "win")
-ELSEIF(ICU_LIBRARIES)
+IF(ICU_LIBRARIES)
 	SET(VMIME_CHARSETCONV_LIB_DETECTED "icu")
 ELSEIF(ICONV_FOUND)
 	SET(VMIME_CHARSETCONV_LIB_DETECTED "iconv")
+ELSEIF(WIN32)
+	SET(VMIME_CHARSETCONV_LIB_DETECTED "win")
 ENDIF()
 
 SET(
@@ -802,6 +802,10 @@ ELSEIF(VMIME_CHARSETCONV_LIB STREQUAL "icu")
 	SET(VMIME_CHARSETCONV_LIB_IS_WIN "OFF")
 
 ELSEIF(VMIME_CHARSETCONV_LIB STREQUAL "win")
+
+	MESSAGE(WARNING "*** ICU or iconv library should always be preferred"
+		" over MultiByteToWideChar/WideCharToMultiByte on Windows, as"
+		" error handling is very poor, and there is no streaming support.")
 
 	SET(VMIME_CHARSETCONV_LIB_IS_ICONV "OFF")
 	SET(VMIME_CHARSETCONV_LIB_IS_ICU "OFF")
