Added support for TCP Keepalive.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -975,6 +975,8 @@ CHECK_FUNCTION_EXISTS(gettid VMIME_HAVE_GETTID)
 CHECK_FUNCTION_EXISTS(syscall VMIME_HAVE_SYSCALL)
 CHECK_SYMBOL_EXISTS(SYS_gettid sys/syscall.h VMIME_HAVE_SYSCALL_GETTID)
 
+CHECK_SYMBOL_EXISTS(SO_KEEPALIVE sys/socket.h VMIME_HAVE_SO_KEEPALIVE)
+
 FIND_PACKAGE(Threads)
 
 IF(VMIME_BUILD_SHARED_LIBRARY)
