--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,10 +118,10 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		COPY
 		${CMAKE_CURRENT_BINARY_DIR}/export-shared.hpp
 		DESTINATION
-		${PROJECT_SOURCE_DIR}/src/vmime
+		${CMAKE_BINARY_DIR}/src/vmime
 	)
 
-	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/vmime/export-shared.hpp")
+	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_BINARY_DIR}/src/vmime/export-shared.hpp")
 
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}
@@ -163,10 +163,10 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 		COPY
 		${CMAKE_CURRENT_BINARY_DIR}/export-static.hpp
 		DESTINATION
-		${PROJECT_SOURCE_DIR}/src/vmime
+		${CMAKE_BINARY_DIR}/src/vmime
 	)
 
-	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/vmime/export-static.hpp")
+	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_BINARY_DIR}/src/vmime/export-static.hpp")
 
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}-static
