Misc fixes in error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -978,6 +978,8 @@ CHECK_SYMBOL_EXISTS(SYS_gettid sys/syscall.h VMIME_HAVE_SYSCALL_GETTID)
 
 CHECK_SYMBOL_EXISTS(SO_KEEPALIVE sys/socket.h VMIME_HAVE_SO_KEEPALIVE)
 
+CHECK_SYMBOL_EXISTS(strerror_r string.h VMIME_HAVE_STRERROR_R)
+
 FIND_PACKAGE(Threads)
 
 IF(VMIME_BUILD_SHARED_LIBRARY)
