Link with 'anl' only when building shared lib.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1012,11 +1012,13 @@ LIST(APPEND CMAKE_REQUIRED_LIBRARIES anl)
 CHECK_SYMBOL_EXISTS(getaddrinfo_a netdb.h VMIME_HAVE_GETADDRINFO_A)
 
 IF(VMIME_HAVE_GETADDRINFO_A)
-	TARGET_LINK_LIBRARIES(
-		${VMIME_LIBRARY_NAME}
-		${TARGET_LINK_LIBRARIES}
-		anl
-	)
+	IF(VMIME_BUILD_SHARED_LIBRARY)
+		TARGET_LINK_LIBRARIES(
+			${VMIME_LIBRARY_NAME}
+			${TARGET_LINK_LIBRARIES}
+			anl
+		)
+	ENDIF()
 ENDIF()
 
 
