Fixed #142: fixed install location of generated headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,8 +246,8 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 ENDIF()
 
 # Installation of header files
-INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_INCLUDE_FILES headers src/)
-INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_GENERATED_INCLUDE_FILES headers src/)
+INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_INCLUDE_FILES headers "${CMAKE_SOURCE_DIR}/src/")
+INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_GENERATED_INCLUDE_FILES headers "${CMAKE_BINARY_DIR}/src")
 
 #INSTALL(
 #	FILES ${VMIME_LIBRARY_INCLUDE_FILES}
