--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,7 @@ SET(CMAKE_INSTALL_LIBDIR lib CACHE PATH "Output directory for libraries")
 IF(VMIME_BUILD_SHARED_LIBRARY)
 	INSTALL(
 		TARGETS ${VMIME_LIBRARY_NAME}
+		EXPORT ${VMIME_LIBRARY_NAME}-config
 		LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
 		ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
 	)
@@ -207,6 +208,7 @@ ENDIF()
 IF(VMIME_BUILD_STATIC_LIBRARY)
 	INSTALL(
 		TARGETS ${VMIME_LIBRARY_NAME}-static
+		EXPORT ${VMIME_LIBRARY_NAME}-config
 		LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
 		ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
 	)
@@ -221,6 +223,8 @@ INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_GENERATED_INCLUDE_FILES headers "${
 #	DESTINATION include
 #	COMPONENT headers
 #)
+
+install(EXPORT ${VMIME_LIBRARY_NAME}-config DESTINATION cmake)
 
 
 ##############################################################################
