--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,10 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		${VMIME_LIBRARY_INCLUDE_FILES}
 	)
 
+	TARGET_INCLUDE_DIRECTORIES(${VMIME_LIBRARY_NAME} PUBLIC
+  		$<INSTALL_INTERFACE:include>
+	)
+
 	GENERATE_EXPORT_HEADER(
 		${VMIME_LIBRARY_NAME}
 		BASE_NAME VMIME
@@ -152,6 +156,10 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 		STATIC
 		${VMIME_LIBRARY_SRC_FILES}
 		${VMIME_LIBRARY_INCLUDE_FILES}
+	)
+
+ 	TARGET_INCLUDE_DIRECTORIES(${VMIME_LIBRARY_NAME}-static PUBLIC
+  		$<INSTALL_INTERFACE:include>
 	)
 
 	GENERATE_EXPORT_HEADER(
