build: stop joining PREFIX to LIBDIR
Of the build systems I know, variables like libdir (whatever the name)
is never appended to prefix, because overrides are commonly an absolute
path and joining with prefix would lead to /usr/usr/lib.

Fixes #200.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,15 +206,13 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 	SET_TARGET_PROPERTIES(${VMIME_LIBRARY_NAME}-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 ENDIF()
 
-SET(CMAKE_INSTALL_LIBDIR lib CACHE PATH "Output directory for libraries")
-
 # Installation of libraries
 IF(VMIME_BUILD_SHARED_LIBRARY)
 	INSTALL(
 		TARGETS ${VMIME_LIBRARY_NAME}
 		EXPORT ${VMIME_LIBRARY_NAME}-config
-		LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
-		ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
+		LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
+		ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT sharedlibs
 	)
 ENDIF()
 
@@ -222,8 +220,8 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 	INSTALL(
 		TARGETS ${VMIME_LIBRARY_NAME}-static
 		EXPORT ${VMIME_LIBRARY_NAME}-config
-		LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
-		ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
+		LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
+		ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT staticlibs
 	)
 ENDIF()
 
@@ -394,9 +392,9 @@ ADD_CUSTOM_TARGET(
 
 # PkgConfig
 SET(prefix      ${CMAKE_INSTALL_PREFIX})
-SET(exec_prefix ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
-SET(includedir  ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/vmime)
-SET(libdir      ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+SET(exec_prefix ${CMAKE_INSTALL_BINDIR})
+SET(includedir  ${CMAKE_INSTALL_INCLUDEDIR}/vmime)
+SET(libdir      ${CMAKE_INSTALL_LIBDIR})
 
 SET(VMIME_PKGCONFIG_LIBS     "")
 SET(VMIME_PKGCONFIG_CFLAGS   "")
@@ -1019,7 +1017,7 @@ CONFIGURE_FILE(cmake/config.hpp.cmake ${CMAKE_BINARY_DIR}/src/vmime/config.hpp)
 
 # PkgConfig post-configuration
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/vmime.pc.in ${CMAKE_BINARY_DIR}/vmime.pc @ONLY)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/vmime.pc DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/pkgconfig" COMPONENT headers)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/vmime.pc DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig" COMPONENT headers)
 
 INCLUDE(CPack)
 
