--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,6 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY build/lib)
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 
-# Project
-PROJECT(vmime)
-
 # Package version number
 SET(VMIME_VERSION_MAJOR  0)
 SET(VMIME_VERSION_MINOR  9)
@@ -65,8 +62,16 @@ SET(VMIME_API_VERSION ${VMIME_API_VERSION_CURRENT}.${VMIME_API_VERSION_REVISION}
 ##############################################################################
 # VMime Library
 
+# Project
+PROJECT(
+	vmime
+	LANGUAGES CXX C
+	VERSION ${VMIME_VERSION}
+)
+
 # Set base name
 SET(VMIME_LIBRARY_NAME vmime)
+SET(VMIME_LIBRARY_VENDOR Kisli)
 
 # Enable C++11
 SET(CMAKE_CXX_STANDARD 11)
@@ -336,26 +341,31 @@ OPTION(
 
 # Package information
 SET(VMIME_PACKAGE_NAME         ${VMIME_LIBRARY_NAME})
+SET(VMIME_PACKAGE_VENDOR       ${VMIME_LIBRARY_VENDOR})
 SET(VMIME_PACKAGE_VERSION      ${VMIME_VERSION})
 SET(VMIME_PACKAGE_CONTACT      "Vincent Richard <vincent@vmime.org>")
 SET(VMIME_PACKAGE_DESCRIPTION  "VMime C++ Mail Library (http://www.vmime.org)")
+SET(VMIME_PACKAGE_HOMEPAGE_URL "https://www.vmime.org")
 
 SET(CPACK_PACKAGE_NAME                 "${VMIME_PACKAGE_NAME}")
+SET(CPACK_PACKAGE_VENDOR               "${VMIME_PACKAGE_VENDOR}")
 SET(CPACK_PACKAGE_CONTACT              "${VMIME_PACKAGE_CONTACT}")
 SET(CPACK_PACKAGE_DESCRIPTION          "${VMIME_PACKAGE_DESCRIPTION}")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY  "${CPACK_PACKAGE_DESCRIPTION}")
+SET(CPACK_PACKAGE_HOMEPAGE_URL         "${VMIME_PACKAGE_HOMEPAGE_URL}")
 SET(CPACK_PACKAGE_VERSION              "${VMIME_PACKAGE_VERSION}")
 
 # Package settings
-SET(CPACK_RESOURCE_FILE_LICENSE        ${CMAKE_CURRENT_SOURCE_DIR}/COPYING)
-
 IF(APPLE)
 	# CPack/PackageManager won't allow file without recognized extension
 	# to be used as license file.
 	CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/COPYING" "${CMAKE_BINARY_DIR}/COPYING.txt" COPYONLY)
 	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_BINARY_DIR}/COPYING.txt")
+	CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/README" "${CMAKE_BINARY_DIR}/README.txt" COPYONLY)
+	SET(CPACK_RESOURCE_FILE_README "${CMAKE_BINARY_DIR}/README.txt")
 ELSE()
 	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
+	SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README")
 ENDIF(APPLE)
 
 SET(CPACK_SOURCE_GENERATOR             TGZ)
