--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,10 +154,10 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		COPY
 		${CMAKE_CURRENT_BINARY_DIR}/export-shared.hpp
 		DESTINATION
-		${CMAKE_BINARY_DIR}/src/vmime
+		${CMAKE_CURRENT_SOURCE_DIR}/src/vmime
 	)
 
-	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_BINARY_DIR}/src/vmime/export-shared.hpp")
+	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/vmime/export-shared.hpp")
 
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}
