Update cmake to include char conversion dependency on static library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -725,6 +725,14 @@ IF(VMIME_CHARSETCONV_LIB STREQUAL "iconv")
 		)
 	ENDIF()
 
+	IF(VMIME_BUILD_STATIC_LIBRARY)
+		TARGET_LINK_LIBRARIES(
+			${VMIME_LIBRARY_NAME}-static
+			${TARGET_LINK_LIBRARIES}
+			${ICONV_LIBRARIES}
+		)
+	ENDIF()
+
 	SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${ICONV_LIBRARIES}")
 	SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} -I${ICONV_INCLUDE_DIR}")
 
@@ -742,6 +750,14 @@ ELSEIF(VMIME_CHARSETCONV_LIB STREQUAL "icu")
 	IF(VMIME_BUILD_SHARED_LIBRARY)
 		TARGET_LINK_LIBRARIES(
 			${VMIME_LIBRARY_NAME}
+			${TARGET_LINK_LIBRARIES}
+			${ICU_LIBRARIES}
+		)
+	ENDIF()
+
+	IF(VMIME_BUILD_STATIC_LIBRARY)
+		TARGET_LINK_LIBRARIES(
+			${VMIME_LIBRARY_NAME}-static
 			${TARGET_LINK_LIBRARIES}
 			${ICU_LIBRARIES}
 		)
